feat:authentication endpoints: refresh token, logout, email confirmation, reset confirmation email, forgot password, and reset password

--- a/src/Goodreads.API/appsettings.Development.json
+++ b/src/Goodreads.API/appsettings.Development.json
@@ -8,5 +8,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=GoodreadsDb;Trusted_Connection=True;TrustServerCertificate=True"
   },
-  "RunMigrations": true
+  "RunMigrations": true,
+  "JwtSettings": {
+    "Secret": "W9L1kHqYx5Rz7Mb3sU2XeD8P0fGvJiTc",
+    "TokenExpirationInMinutes": 60,
+    "Issuer": "localhost:3000",
+    "Audience": "localhost:5000"
+  }
 }
