--- a/src/Goodreads.API/appsettings.Development.json
+++ b/src/Goodreads.API/appsettings.Development.json
@@ -14,5 +14,14 @@
     "TokenExpirationInMinutes": 60,
     "Issuer": "localhost:3000",
     "Audience": "localhost:5000"
+  },
+  "EmailSettings": {
+    "UseSmtp4Dev": true,
+    "FromEmail": "",
+    "FromName": "Goodreads API",
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "",
+    "Password": ""
   }
 }
