feat(user): introduce user entity and profile management feat(user-follow): implement user follow/unfollow system

--- a/src/Goodreads.Application/Goodreads.Application.csproj
+++ b/src/Goodreads.Application/Goodreads.Application.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="MediatR" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+    <PackageReference Include="System.Linq.Dynamic.Core" />
   </ItemGroup>
 
   <ItemGroup>
