--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -4,6 +4,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageVersion Include="AutoMapper" Version="14.0.0" />
+    <PackageVersion Include="Azure.Storage.Blobs" Version="12.24.0" />
     <PackageVersion Include="FluentEmail.Core" Version="3.0.2" />
     <PackageVersion Include="FluentEmail.Smtp" Version="3.0.2" />
     <PackageVersion Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
@@ -22,5 +23,6 @@
     <PackageVersion Include="Scalar.AspNetCore" Version="2.4.3" />
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="8.1.2" />
     <PackageVersion Include="Swashbuckle.AspNetCore.SwaggerUI" Version="8.1.2" />
+    <PackageVersion Include="System.Linq.Dynamic.Core" Version="1.6.4" />
   </ItemGroup>
 </Project>
