--- a/src/Goodreads.Infrastructure/Goodreads.Infrastructure.csproj
+++ b/src/Goodreads.Infrastructure/Goodreads.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" />
     <PackageReference Include="FluentEmail.Core" />
     <PackageReference Include="FluentEmail.Smtp" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" />
