--- a/src/Goodreads.API/appsettings.Development.json
+++ b/src/Goodreads.API/appsettings.Development.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=GoodreadsDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost;Database=GoodreadsDb;Trusted_Connection=True;TrustServerCertificate=True",
+    "HangfireConnection": "Data Source=goodreadsjobs.db"
   },
   "RunMigrations": true,
   "JwtSettings": {
